@@ -1,1 +1,2 @@
+https://www.nsu.ru/n/media/news/nauka ; .news-list-grid-item ; .name.link-issue ; href ; .date
 https://media.kpfu.ru/news?kn%5B0%5D=%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%D1%83%D0%BA%D0%B8&created ; .newsItem-content ; .newsItem-top a.boldLink ; href ; .newsItem-date
